--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
 baseURL = 'https://nagato-D.github.io/'
 languageCode = 'en-us'
-title = 'My New Hugo Site'
+title = 'Di Yu Homepage'
 theme = 'LoveIt'
