--- a/hugo.toml
+++ b/hugo.toml
@@ -8,6 +8,49 @@ theme = 'LoveIt'
     extended = true
     min = "0.62.0"
 
+# Menu config
+# 菜单配置
+[menu]
+
+  [[menu.main]]
+    weight = 1
+    identifier = "posts"
+    # you can add extra information before the name (HTML format is supported), such as icons
+    # 你可以在名称 (允许 HTML 格式) 之前添加其他信息, 例如图标
+    pre = ""
+    # you can add extra information after the name (HTML format is supported), such as icons
+    # 你可以在名称 (允许 HTML 格式) 之后添加其他信息, 例如图标
+    post = ""
+    name = "Posts"
+    url = "/posts/"
+    # title will be shown when you hover on this menu link
+    # 当您将鼠标悬停在此菜单链接上时, 将显示标题
+    title = ""
+  [[menu.main]]
+    weight = 2
+    identifier = "publications"
+    pre = ""
+    post = ""
+    name = "Publications"
+    url = "/publications/"
+    title = ""
+  [[menu.main]]
+    weight = 3
+    identifier = "patents"
+    pre = ""
+    post = ""
+    name = "Patents"
+    url = "/patents/"
+    title = ""
+  [[menu.main]]
+    weight = 4
+    identifier = "favorites"
+    pre = ""
+    post = ""
+    name = "Favorites"
+    url = "/favorites/"
+    title = ""
+
 [params]
   # site default theme ["auto", "light", "dark"]
   # 网站默认主题 ["auto", "light", "dark"]
