add bilibili link

--- a/hugo.toml
+++ b/hugo.toml
@@ -310,7 +310,7 @@ theme = 'LoveIt'
     Gitea = ""
     XMPP = ""
     Matrix = ""
-    Bilibili = ""
+    Bilibili = "24131335"
     Discord = ""
     DiscordInvite = ""
     Lichess = ""
