--- a/hugo.toml
+++ b/hugo.toml
@@ -242,7 +242,7 @@ theme = 'LoveIt'
     # Home page posts
     # 主页文章列表
     [params.home.posts]
-      enable = true
+      enable = false
       # special amount of posts in each home posts page
       # 主页每页显示文章数量
       paginate = 1
